added info to the team section of the site

--- a/index.html
+++ b/index.html
@@ -470,9 +470,10 @@
           <div class="col-lg-12">
             <h2 class="h2-heading">About the team</h2>
             <p class="p-heading">
-              Nulla non auctor ex. Suspendisse porttitor lorem sed eros
-              faucibus, at suscipit lorem sodales. Sed sagittis, risus et
-              maximus blandit ropane maximus elit, vitae
+              We are incredibly proud to have such an incredible team onboard!
+               Many of us wear multiple hats to make things run behind the scenes, so if the person you're looking 
+               to contact isn't below- don't fret! Send us a message at: <a href="mailto:info@duetwo.dev">info@duetwo.dev</a>
+               and we will have your message sent to the right people!
             </p>
           </div>
           <!-- end of col -->
