updated footer with correct links

--- a/index.html
+++ b/index.html
@@ -698,9 +698,13 @@
         <div class="row">
           <div class="col-lg-6">
             <ul class="list-unstyled li-space-lg p-small">
-              <li><a href="article.html">Article Details</a></li>
-              <li><a href="terms.html">Terms & Conditions</a></li>
-              <li><a href="privacy.html">Privacy Policy</a></li>
+              <li><a href="#header">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#projects">Projects</a></li>
+              <li><a href="#causes">Causes</a></li>
+              <li><a href="#team">Team</a></li>
+              <li><a href="#contact">Contact</a></li>
+              <li><a href=" ">App Download</a></li>
             </ul>
           </div>
           <!-- end of col -->
