removed learn more button on causes section

--- a/index.html
+++ b/index.html
@@ -177,8 +177,7 @@
             <div class="col-lg-12">
               <div class="text-container">
                 <h4>
-                  We are currenlty working on our debut project, which is set to
-                  be unveiled later this year
+                  We are currenlty working on our debut app- PROJECT VOTE! Which is set to be unveiled later this year.
                 </h4>
                 <p class="p-large">
                   To stay up to date on DueTwo Software projects and
@@ -388,8 +387,8 @@
                   <li>Vivamus dignissim sit amet</li>
                   <li>Ut convallis aliquama set</li>
                 </ul>
-                <!-- <div class="price">$200</div> -->
-                <a href="#contact" class="btn-outline-reg">Learn More</a>
+                <!-- <div class="price">$200</div> 
+                <a href="#contact" class="btn-outline-reg">Learn More</a> -->
               </div>
             </div>
             <!-- end of card -->
@@ -418,8 +417,8 @@
                   <li>Sed laoreet blandit mollis</li>
                   <li>Mauris non luctus est</li>
                 </ul>
-                <!--   <div class="price">$300</div> -->
-                <a href="#contact" class="btn-outline-reg">Learn More</a>
+                <!--   <div class="price">$300</div> 
+                <a href="#contact" class="btn-outline-reg">Learn More</a> -->
               </div>
             </div>
             <!-- end of card -->
@@ -448,8 +447,8 @@
                   <li>Mollis felis. Integer id quam</li>
                   <li>Id tellus hendrerit lacinia</li>
                 </ul>
-                <!-- <div class="price">$400</div> -->
-                <a href="#contact" class="btn-outline-reg">Learn More</a>
+                <!-- <div class="price">$400</div> 
+                <a href="#contact" class="btn-outline-reg">Learn More</a> -->
               </div>
             </div>
             <!-- end of card -->
