added updates to the causes section of the website

--- a/index.html
+++ b/index.html
@@ -379,16 +379,20 @@
                   />
                 </div>
                 <ul class="list-unstyled li-space-lg">
-                  <li>Fusce pulvinar eu mi acm</li>
-                  <li>Curabitur consequat nisl bro</li>
+                  <li>Voting is the language of American democracy.
+                     The ability to participate in civic life — to have
+                      a voice in choosing the elected officials whose
+                       decisions impact our lives, families, and communities
+                        — is at the core of what it means to be an American.</li>
+                 <!--  <li>Curabitur consequat nisl bro</li>
                   <li>Reget facilisis molestie</li>
                   <li>Vivamus vitae sem in tortor</li>
                   <li>Pharetra vehicula ornares</li>
                   <li>Vivamus dignissim sit amet</li>
-                  <li>Ut convallis aliquama set</li>
+                  <li>Ut convallis aliquama set</li> -->
                 </ul>
-                <!-- <div class="price">$200</div> 
-                <a href="#contact" class="btn-outline-reg">Learn More</a> -->
+                <!-- <div class="price">$200</div>  -->
+                <a href="https://civilrights.org/value/voting-rights/" class="btn-outline-reg">Learn More</a> 
               </div>
             </div>
             <!-- end of card -->
@@ -409,16 +413,22 @@
                   />
                 </div>
                 <ul class="list-unstyled li-space-lg">
-                  <li>Nunc commodo magna quis</li>
-                  <li>Lacus fermentum tincidunt</li>
+                  <li>Climate Change is the defining issue of 
+                    our time and we are at a defining moment.
+                     From shifting weather patterns that threaten 
+                     food production, to rising sea levels that 
+                     increase the risk of catastrophic flooding, 
+                     the impacts of climate change are global in
+                      scope and unprecedented in scale. </li>
+                 <!--  <li>Lacus fermentum tincidunt</li>
                   <li>Nullam lobortis porta diam</li>
                   <li>Announcing of invita mro</li>
                   <li>Dictum metus placerat luctus</li>
                   <li>Sed laoreet blandit mollis</li>
-                  <li>Mauris non luctus est</li>
+                  <li>Mauris non luctus est</li> -->
                 </ul>
-                <!--   <div class="price">$300</div> 
-                <a href="#contact" class="btn-outline-reg">Learn More</a> -->
+                <!--   <div class="price">$300</div> -->
+                <a href="https://www.un.org/en/global-issues/climate-change" class="btn-outline-reg">Learn More</a> 
               </div>
             </div>
             <!-- end of card -->
@@ -439,16 +449,20 @@
                   />
                 </div>
                 <ul class="list-unstyled li-space-lg">
-                  <li>Quisque rutrum mattis</li>
-                  <li>Quisque tristique cursus lacus</li>
+                  <li>Though many in society believe the coronavirus pandemic to be behind us, 
+                    we are yet to reach the light at the end of this tunnel. It is imperative that we 
+                    as memebers of society continue to treat one another with kindness and decency until the SCIENCE allows 
+                    us to return to our long lost lives. 
+                  </li>
+                 <!--  <li>Quisque tristique cursus lacus</li>
                   <li>Interdum sollicitudin maec</li>
                   <li>Quam posuere, pellentesque</li>
                   <li>Est nec, gravida turpis integer</li>
                   <li>Mollis felis. Integer id quam</li>
-                  <li>Id tellus hendrerit lacinia</li>
+                  <li>Id tellus hendrerit lacinia</li> -->
                 </ul>
-                <!-- <div class="price">$400</div> 
-                <a href="#contact" class="btn-outline-reg">Learn More</a> -->
+                <!-- <div class="price">$400</div> -->
+                <a href="https://www.who.int/health-topics/coronavirus" class="btn-outline-reg">Learn More</a> 
               </div>
             </div>
             <!-- end of card -->
