updated css for team section. still needs fixing

--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
             </div>
             <!-- end of card -->
 
-            <!-- Card -->
+            <!-- Card 
             <div class="card">
               <div class="card-image">
                 <img
@@ -543,7 +543,7 @@
                 <a href="mailto:jonah@duetwo.dev">jonah@duetwo.dev</a>
               </div>
             </div>
-            <!-- end of card -->
+           -->
 
             <!-- Card -->
             <div class="card">
@@ -556,11 +556,30 @@
               </div>
               <div class="card-body">
                 <h6 class="card-title">Natalie Obleton</h6>
-                <p>Director of Special Projects and Product Development</p>
+                <p>Chief Technology Officer</p>
                 <a href="mailto:natalie@duetwo.dev">natalie@duetwo.dev</a>
               </div>
             </div>
             <!-- end of card -->
+
+           
+
+                         <!-- Card -->
+                         <div class="card">
+                          <div class="card-image">
+                            <img
+                              class="img-fluid"
+                              src="images/isabellepic3.png"
+                              alt="alternative"
+                            />
+                          </div>
+                          <div class="card-body">
+                            <h6 class="card-title">Isabelle Selah</h6>
+                            <p>Director of Marketing and Design</p>
+                            <a href="mailto:isabelle@duetwo.dev">isabelle@duetwo.dev</a>
+                          </div>
+                        </div>
+                        <!-- end of card -->
 
             <!-- Card -->
             <div class="card">
@@ -575,23 +594,6 @@
                 <h6 class="card-title">William Reynolds</h6>
                <p>UI/UX Specialist</p>
                <a href="mailto:will@duetwo.dev">will@duetwo.dev</a>
-              </div>
-            </div>
-            <!-- end of card -->
-
-             <!-- Card -->
-             <div class="card">
-              <div class="card-image">
-                <img
-                  class="img-fluid"
-                  src="images/isabellepic3.png"
-                  alt="alternative"
-                />
-              </div>
-              <div class="card-body">
-                <h6 class="card-title">Isabelle Selah</h6>
-                <p>Director of Marketing and Design</p>
-                <a href="mailto:isabelle@duetwo.dev">isabelle@duetwo.dev</a>
               </div>
             </div>
             <!-- end of card -->
