--- a/index.html
+++ b/index.html
@@ -491,6 +491,7 @@
           </div>
           <!-- end of col -->
         </div>
+        <center> 
         <!-- end of row -->
         <div class="row">
           <div class="col-lg-12">
@@ -608,7 +609,7 @@
     </div>
     <!-- end of cards-3 -->
     <!-- end of team -->
-
+  </center>
     <!-- Details 1 -->
     <div id="contact" class="basic-1">
       <div class="container">
