--- a/index.html
+++ b/index.html
@@ -83,9 +83,10 @@
           <li class="nav-item">
             <a class="nav-link" href="#projects">Projects</a>
           </li>
+          <!-- 
           <li class="nav-item">
             <a class="nav-link" href="#causes">Causes</a>
-          </li>
+          </li> -->
           <!-- 
           <li class="nav-item">
             <a class="nav-link" href="#team">Team</a>
@@ -209,7 +210,7 @@
           <!-- end of col -->
           <div class="col-lg-6 col-xl-7">
             <div class="image-container">
-              <img class="img-fluid" src="images/logo icon.png" alt="alternative" width="100" height="200" />
+              <img class="img-fluid" src="images/details-2.svg" alt="alternative" width="100" height="200" />
             </div>
             <!-- end of image-container -->
           </div>
@@ -319,111 +320,6 @@
   <!-- end of filter -->
   <!-- end of projects -->
 
-  <!-- Pricing -->
-  <div id="causes" class="cards-2">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <h2 class="h2-heading"><span>DueTwo </span>Causes</h2>
-        </div>
-        <!-- end of col -->
-      </div>
-      <!-- end of row -->
-      <div class="row">
-        <div class="col-lg-12">
-          <!-- Card -->
-          <div class="card">
-            <div class="card-body">
-              <div class="card-title">
-                <img class="decoration-lines" src="images/decoration-lines.svg" alt="alternative" /><span>Voting
-                  Rights</span><img class="decoration-lines flipped" src="images/decoration-lines.svg"
-                  alt="alternative" />
-              </div>
-              <ul class="list-unstyled li-space-lg">
-                <li>Voting is the language of American democracy.
-                  The ability to participate in civic life — to have
-                  a voice in choosing the elected officials whose
-                  decisions impact our lives, families, and communities
-                  — is at the core of what it means to be an American.</li>
-                <!--  <li>Curabitur consequat nisl bro</li>
-                  <li>Reget facilisis molestie</li>
-                  <li>Vivamus vitae sem in tortor</li>
-                  <li>Pharetra vehicula ornares</li>
-                  <li>Vivamus dignissim sit amet</li>
-                  <li>Ut convallis aliquama set</li> -->
-              </ul>
-              <!-- <div class="price">$200</div>  -->
-              <a href="https://civilrights.org/value/voting-rights/" class="btn-outline-reg">Learn More</a>
-            </div>
-          </div>
-          <!-- end of card -->
-
-          <!-- Card -->
-          <div class="card">
-            <div class="card-body">
-              <div class="card-title">
-                <img class="decoration-lines" src="images/decoration-lines.svg" alt="alternative" /><span>Climate
-                  Change</span><img class="decoration-lines flipped" src="images/decoration-lines.svg"
-                  alt="alternative" />
-              </div>
-              <ul class="list-unstyled li-space-lg">
-                <li>Climate Change is the defining issue of
-                  our time and we are at a defining moment.
-                  From shifting weather patterns that threaten
-                  food production, to rising sea levels that
-                  increase the risk of catastrophic flooding,
-                  the impacts of climate change are global in
-                  scope and unprecedented in scale. </li>
-                <!--  <li>Lacus fermentum tincidunt</li>
-                  <li>Nullam lobortis porta diam</li>
-                  <li>Announcing of invita mro</li>
-                  <li>Dictum metus placerat luctus</li>
-                  <li>Sed laoreet blandit mollis</li>
-                  <li>Mauris non luctus est</li> -->
-              </ul>
-              <!--   <div class="price">$300</div> -->
-              <a href="https://www.un.org/en/global-issues/climate-change" class="btn-outline-reg">Learn More</a>
-            </div>
-          </div>
-          <!-- end of card -->
-
-          <!-- Card -->
-          <div class="card">
-            <div class="card-body">
-              <div class="card-title">
-                <img class="decoration-lines" src="images/decoration-lines.svg"
-                  alt="alternative" /><span>COVID-19</span><img class="decoration-lines flipped"
-                  src="images/decoration-lines.svg" alt="alternative" />
-              </div>
-              <ul class="list-unstyled li-space-lg">
-                <li>Though many in society believe the coronavirus pandemic to be behind us,
-                  we are yet to reach the light at the end of this tunnel. It is imperative that we
-                  as memebers of society continue to treat one another with kindness and decency until the SCIENCE
-                  allows
-                  us to return to our long lost lives.
-                </li>
-                <!--  <li>Quisque tristique cursus lacus</li>
-                  <li>Interdum sollicitudin maec</li>
-                  <li>Quam posuere, pellentesque</li>
-                  <li>Est nec, gravida turpis integer</li>
-                  <li>Mollis felis. Integer id quam</li>
-                  <li>Id tellus hendrerit lacinia</li> -->
-              </ul>
-              <!-- <div class="price">$400</div> -->
-              <a href="https://www.who.int/health-topics/coronavirus" class="btn-outline-reg">Learn More</a>
-            </div>
-          </div>
-          <!-- end of card -->
-        </div>
-        <!-- end of col -->
-      </div>
-      <!-- end of row -->
-    </div>
-    <!-- end of container -->
-  </div>
-  <!-- end of cards-2 -->
-  <!-- end of pricing -->
-
 
   <!-- Details 1 -->
   <div id="contact" class="basic-1">
@@ -522,8 +418,6 @@
             <li><a href="#header">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="#causes">Causes</a></li>
-            <li><a href="#team">Team</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href=" ">App Download</a></li>
           </ul>
