made logo and abut section fixes

--- a/index.html
+++ b/index.html
@@ -179,57 +179,46 @@
   <!-- end of header -->
   <!-- end of header -->
 
-  <!-- Details 2 -->
-  <div id="about">
-    <div class="counter">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6 col-xl-5">
-            <div class="text-container">
-              <h2>
-                <span>About</span><br />
-                DueTwo Software
-              </h2>
-              <p>
-                DueTwo has embraced the broad goal of making the world a
-                better place. We will strive to do this through the software
-                create and publish to the world. The software we create will
-                allow each and every person around the world to help make a
-                difference in our ever-changing world.
-                <br />
-                DueTwo Software is proud to offer a strong plan for how we will grow and expand our product
-                offerings as a company. The first project that we will pursue is “PROJECT VOTE”. Project Vote
-                will be a multi-platform application developed to help make voting easier and more accessible to
-                more people. Project Vote will be available later this year.
-              </p>
+          <!-- Details 2 -->
+          <div class="counter">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 col-xl-5">
+                        <div class="text-container">
+                            <h2><span>About</span><br>DueTwo Software</h2>
+                            <p>
+                              DueTwo has embraced the broad goal of making the world a
+                              better place. We will strive to do this through the software
+                              create and publish to the world. The software we create will
+                              allow each and every person around the world to help make a
+                              difference in our ever-changing world.
+                              <br />
+                              DueTwo Software is proud to offer a strong plan for how we will grow and expand our product
+                              offerings as a company. The first project that we will pursue is “PROJECT VOTE”. Project Vote
+                              will be a multi-platform application developed to help make voting easier and more accessible to
+                              more people. Project Vote will be available later this year.
+                            </p>
+              
+                            <a class="btn-solid-lg" href="plan.pdf">Learn More</a>
 
-              <a class="btn-solid-lg" href="plan.pdf">Learn More</a>
-            </div>
-            <!-- end of text-container -->
-          </div>
-          <!-- end of col -->
-          <div class="col-lg-6 col-xl-7">
-            <div class="image-container">
-              <img class="img-fluid" src="images/details-2.svg" alt="alternative" width="100" height="200" />
-            </div>
-            <!-- end of image-container -->
-          </div>
-          <!-- end of col -->
-        </div>
-        <!-- end of row -->
-      </div>
-      <!-- end of container -->
-    </div>
-    <!-- end of counter -->
-  </div>
-  <!-- end of details 2 -->
+                        </div> <!-- end of text-container -->
+                    </div> <!-- end of col -->
+                    <div class="col-lg-6 col-xl-7">
+                        <div class="image-container">
+                            <img class="img-fluid" src="images/details-2.svg" alt="alternative">
+                        </div> <!-- end of image-container -->
+                    </div> <!-- end of col -->
+                </div> <!-- end of row -->
+            </div> <!-- end of container -->
+        </div> <!-- end of counter -->
+        <!-- end of details 2 -->
 
   <!-- Projects -->
   <div id="projects" class="filter bg-gray">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h1 class="h1-heading">Our Projects!</h1>
+          <h1 class="h2-heading">Our Projects!</h2>
         </div>
         <!-- end of col -->
       </div>
@@ -257,13 +246,13 @@
               </a>
             </div>
 
-            <!-- 
+            
                         <div class="element-item development">
                             <a href="article.html">
                                 <img class="img-fluid" src="images/project-2.jpg" alt="alternative">
                                 <p><strong>Loans company</strong> - odio semper, interdum orci molestie, mattis lectus pellentesq aliqu</p>
                             </a>
-                        </div>
+                        </div>  <!--
                         <div class="element-item development">
                             <a href="article.html">
                                 <img class="img-fluid" src="images/project-3.jpg" alt="alternative">
