added new project picture

--- a/index.html
+++ b/index.html
@@ -239,20 +239,20 @@
           <div class="grid">
             <div class="element-item development">
               <a href=" ">
-                <img class="img-fluid" src="images/newprojectvote.png" alt="alternative" />
+                <img class="img-fluid" src="images/DueVoted website icon.png" alt="alternative" />
                 <p>
                   <strong>Project Vote</strong> - changing the way you vote
                 </p>
               </a>
             </div>
 
-            
+            <!--
                         <div class="element-item development">
                             <a href="article.html">
                                 <img class="img-fluid" src="images/project-2.jpg" alt="alternative">
                                 <p><strong>Loans company</strong> - odio semper, interdum orci molestie, mattis lectus pellentesq aliqu</p>
                             </a>
-                        </div>  <!--
+                        </div>  
                         <div class="element-item development">
                             <a href="article.html">
                                 <img class="img-fluid" src="images/project-3.jpg" alt="alternative">
