updated newsletter section

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           <div class="col-lg-12">
             <div class="text-container">
               <h4>
-                We are currenlty working on our debut app- PROJECT VOTE! Which is set to be unveiled later this year.
+                We are currenlty working on our debut app- DUEVOTED! Which is set to be unveiled later this year.
               </h4>
               <p class="p-large">
                 To stay up to date on DueTwo Software projects and
