fixed the broken about link

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
   <!-- end of header -->
 
           <!-- Details 2 -->
-          <div class="counter">
+          <div id = "about" div class="counter">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-xl-5">
