added links to social media in the footer

--- a/index.html
+++ b/index.html
@@ -357,33 +357,21 @@
           <br />
           <div class="social-container">
             <span class="fa-stack">
-              <a href="#your-link">
+              <a href="facebook.com/DueTwoSoftware">
                 <i class="fas fa-circle fa-stack-2x"></i>
                 <i class="fab fa-facebook-f fa-stack-1x"></i>
               </a>
             </span>
             <span class="fa-stack">
-              <a href="#your-link">
+              <a href="twitter.com/DueTwoSoftware">
                 <i class="fas fa-circle fa-stack-2x"></i>
                 <i class="fab fa-twitter fa-stack-1x"></i>
               </a>
             </span>
             <span class="fa-stack">
-              <a href="#your-link">
-                <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fab fa-pinterest-p fa-stack-1x"></i>
-              </a>
-            </span>
-            <span class="fa-stack">
-              <a href="#your-link">
+              <a href="instagram.com/DueTwoSoftware">
                 <i class="fas fa-circle fa-stack-2x"></i>
                 <i class="fab fa-instagram fa-stack-1x"></i>
-              </a>
-            </span>
-            <span class="fa-stack">
-              <a href="#your-link">
-                <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fab fa-youtube fa-stack-1x"></i>
               </a>
             </span>
           </div>
