updated and corrected links

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               <p class="p-large">
                 To stay up to date on DueTwo Software projects and
                 announcements,
-                <a href="https://forms.gle/iwos3WWQ7bK2VxV17"> click here </a>
+                <a href="https://forms.gle/iwos3WWQ7bK2VxV17" target="_blank"> click here </a>
                 to subscribe to our newsletter.
               </p>
             </div>
@@ -357,19 +357,19 @@
           <br />
           <div class="social-container">
             <span class="fa-stack">
-              <a href="facebook.com/DueTwoSoftware">
+              <a href="https://www.facebook.com/DueTwoSoftware" target="_blank">
                 <i class="fas fa-circle fa-stack-2x"></i>
                 <i class="fab fa-facebook-f fa-stack-1x"></i>
               </a>
             </span>
             <span class="fa-stack">
-              <a href="twitter.com/DueTwoSoftware">
+              <a href="https://twitter.com/DueTwoSoftware" target="_blank">
                 <i class="fas fa-circle fa-stack-2x"></i>
                 <i class="fab fa-twitter fa-stack-1x"></i>
               </a>
             </span>
             <span class="fa-stack">
-              <a href="instagram.com/DueTwoSoftware">
+              <a href="https://www.instagram.com/DueTwoSoftware/" target="_blank">
                 <i class="fas fa-circle fa-stack-2x"></i>
                 <i class="fab fa-instagram fa-stack-1x"></i>
               </a>
