--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
               will reach out to you shortly
             </p>
 
-            <i class="fas fa-envelope"></i> &nbsp;<a href="mailto:info@duetwo.dev">info@duetwo.dev</a>
+            <i class="fas fa-envelope"></i> &nbsp;<a href="mailto:hi@duetwo.dev">info@duetwo.dev</a>
             <br />
             <br />
           </div>
@@ -352,7 +352,7 @@
         <div class="col-lg-12">
           <h4>Changing Software - One App at a Time</h4>
           <i class="fas fa-envelope"></i><a href="mailto:info@duetwo.dev">
-            <h6>info@duetwo.dev</h6>
+            <h6>hi@duetwo.dev</h6>
           </a>
           <br />
           <div class="social-container">
