fixed email on website

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
               will reach out to you shortly
             </p>
 
-            <i class="fas fa-envelope"></i> &nbsp;<a href="mailto:hi@duetwo.dev">info@duetwo.dev</a>
+            <i class="fas fa-envelope"></i> &nbsp;<a href="mailto:hi@duetwo.dev">hi@duetwo.dev</a>
             <br />
             <br />
           </div>
@@ -351,7 +351,7 @@
       <div class="row">
         <div class="col-lg-12">
           <h4>Changing Software - One App at a Time</h4>
-          <i class="fas fa-envelope"></i><a href="mailto:info@duetwo.dev">
+          <i class="fas fa-envelope"></i><a href="mailto:hi@duetwo.dev">
             <h6>hi@duetwo.dev</h6>
           </a>
           <br />
