added investor section to the website

--- a/index.html
+++ b/index.html
@@ -159,10 +159,8 @@
                 We are currenlty working on our debut app- DUEVOTED! Which is set to be unveiled later this year.
               </h4>
               <p class="p-large">
-                To stay up to date on DueTwo Software projects and
-                announcements,
-                <a href="https://forms.gle/iwos3WWQ7bK2VxV17" target="_blank"> click here </a>
-                to subscribe to our newsletter.
+                To support DueTwo Software and our future innovations, visit our Investor page at: 
+                <a href="https://investor.duetwo.dev/" target="_blank">investor.duetwo.dev</a>
               </p>
             </div>
             <!-- end of text-container -->
