updated home cover

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <meta name="twitter:card" content="summary_large_image"> <!-- to have large image post format in Twitter -->
 
         <!-- Webpage Title -->
-        <title>Webpage Title</title>
+        <title>DueTwo Software</title>
         
         <!-- Styles -->
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
@@ -100,7 +100,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <h1 class="h1-large">LORE<br> IPSUM<br> DELERO</h1>
+                        <h1 class="h1-large">DueTwo<br> Software<br>LLC</h1>
                     </div> <!-- end of col -->
                     <div class="col-lg-6">
                         <div class="button-container">
