--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="container">
 
                 <!-- Image Logo -->
-                <a class="navbar-brand logo-image" href="index.html"><img src="images/logo.svg" alt="alternative"></a> 
+                <a class="navbar-brand logo-image" href="index.html"><img src="images/logo.png" alt="alternative"></a> 
 
                 <!-- Text Logo - Use this if you don't have a graphic logo -->
                 <!-- <a class="navbar-brand logo-text" href="index.html">Name</a> -->
