--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <link href="css/styles.css" rel="stylesheet">
         
         <!-- Favicon  -->
-        <link rel="icon" href="images/favicon.png">
+        <link rel="icon" href="images/tabpic.png">
     </head>
     <body data-bs-spy="scroll" data-bs-target="#navbarExample">
         
