--- a/index.html
+++ b/index.html
@@ -383,37 +383,15 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h2 class="h2-heading">Ornare quam viverra orci sagit</h2>
-                        <p class="p-heading">Sit amet mauris commodo quis imperdiet massa. Varius duis at consectetur lorem donec</p>
+                        <h2 class="h2-heading">Contact our Team</h2>
+                        <p class="p-heading">Feel free to send us a message if you have any questions or wish to inquire about a project</p>
                         <ul class="list-unstyled li-space-lg">
-                            <li><i class="fas fa-map-marker-alt"></i> &nbsp;22 Elementum, Luvi Commodo, RA 12345, LR</li>
-                            <li><i class="fas fa-phone"></i> &nbsp;<a href="tel:00123456789">+12 345 6789</a></li>
-                            <li><i class="fas fa-envelope"></i> &nbsp;<a href="mailto:contact@site.com">contact@site.com</a></li>
+
+                            <li><i class="fas fa-envelope"></i> &nbsp;<a href="mailto:info@duetwo.dev">info@duetwo.dev</a></li>
                         </ul>
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
-                <div class="row">
-                    <div class="col-lg-10 offset-lg-1">
-                        
-                        <!-- Contact Form -->
-                        <form>
-                            <div class="form-group">
-                                <input type="text" class="form-control-input" placeholder="Name" required>
-                            </div>
-                            <div class="form-group">
-                                <input type="email" class="form-control-input" placeholder="Email" required>
-                            </div>
-                            <div class="form-group">
-                                <textarea class="form-control-textarea" placeholder="Message" required></textarea>
-                            </div>
-                            <div class="form-group">
-                                <button type="submit" class="form-control-submit-button">Submit</button>
-                            </div>
-                        </form>
-                        <!-- end of contact form -->
-
-                    </div> <!-- end of col -->
-                </div> <!-- end of row -->
+        
             </div> <!-- end of container -->
         </div> <!-- end of form-1 -->
         <!-- end of contact -->
