updated navbar linking

--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
                             <a class="nav-link" href="#header">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#projects">About</a>
+                            <a class="nav-link" href="#intro">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#services">Projects</a>
+                            <a class="nav-link" href="#projects">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#about">Contact</a>
+                            <a class="nav-link" href="#contact">Contact</a>
                         </li>
                    
                     </ul>
