updated social media navbar

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <span class="fa-stack">
                             <a href="#your-link">
                                 <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-twitter fa-stack-1x"></i>
+                                <i class="fab fa-instagram fa-stack-1x"></i>
                             </a>
                         </span>
                     </span>
