added content for the about section

--- a/index.html
+++ b/index.html
@@ -107,13 +107,21 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <h1>Leo a diam sollicitudi tempor id eu nisl nunc mi sem eget magna</h1>
+                        <h1>About DueTwo Software LLC</h1>
                     </div> <!-- end of col -->
                     <div class="col-lg-6">
                         <div class="text-container">
-                            <p><strong>Lorem</strong> consequat mauris nunc congue nisi vitae suscipit tellus. Amet justo donec enim diam vulputate ut pharetra urna porttitor rhoncus</p>
-                            <p><strong>Ipsume</strong> pellentesque pulvinar pellentesque habitant morbi tristique elit pellentesque habitant morbi tristique senectus et sodales</p>
-                            <p><strong>Dovores</strong> aenean et tortor at risus viverra adipiscing at nisi scelerisque eu ultrices vitae. Sed euismod nisi porta lorem mollis</p>
+                            <p>DueTwo has embraced the broad goal of making the world a better place. We will strive 
+                                to do this through the software we create and publish to the world. Each app, each 
+                                piece of software will allow each and every person around the world to help make a 
+                                difference in our ever-changing society.</p>
+                                <br />
+                            <p>DueTwo Software is proud to offer a strong plan for how we will grow and expand our
+                                 product offerings as a company. The first project that we will pursue is “DUEVOTED”. 
+                                 DueVoted will be a multi-platform application developed to help make voting easier and 
+                                 more accessible to more people.</p>
+                                 <br /> 
+                                 <a class="read-more no-line green" href="plan.pdf">Learn more <span class="fas fa-long-arrow-alt-right"></span></a>
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
