removed some content and added project details

--- a/index.html
+++ b/index.html
@@ -136,91 +136,23 @@
                 <div class="row">
                     <div class="col-lg-6 col-xl-5">
                         <div class="text-container">
-                            <h2>Congue quisque egestas diam in arcu cursus eui</h2>
-                            <p>Commodo odio aenean sed adipiscing diam donec adipiscing tristique risus. Ultrices gravida dictum fusce ut. Volutpat maecenas volutpat blandit aliquam. Fusce ut placerat orci nulla pellentesque dignissim eni</p>
-                            <a class="read-more no-line green" href="article.html">Learn more <span class="fas fa-long-arrow-alt-right"></span></a>
+                            <h2>DueVoted</h2>
+                            <p>Changing the way you vote forever</p>
+                            
+                            <p>DueVoted is a new cross-platform application with the purpose of making voting easier 
+                                and more accessible and cutting out the heavy noise from the traditional media.</p>
+                            <a class="read-more no-line green" href="https://www.duevoted.app/">Learn more <span class="fas fa-long-arrow-alt-right"></span></a>
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
                     <div class="col-lg-6 col-xl-7">
                         <div class="image-container">
-                            <img class="img-fluid" src="images/project-1.jpg" alt="alternative">
+                            <img class="img-fluid" src="images/newduevoted.png" alt="alternative">
                         </div> <!-- end of image-container -->
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
             </div> <!-- end of container -->
         </div> <!-- end of basic-2 -->
         <!-- end of project 1 -->
-
-
-        <!-- Project 2 -->
-        <div class="basic-3 bg-gray">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 col-xl-7">
-                        <div class="image-container">
-                            <img class="img-fluid" src="images/project-2.jpg" alt="alternative">
-                        </div> <!-- end of image-container -->
-                    </div> <!-- end of col -->
-                    <div class="col-lg-6 col-xl-5">
-                        <div class="text-container">
-                            <h2>Idconse ctetur purus ut faucibus magna etia</h2>
-                            <p>Ultrices mi tempus imperdiet nulla malesuada. In est ante in nibh mauris cursus mattis molestie a. Aliquet bibendum enim facilisis gravida neque convallis a cras semper. Consectetur adipiscing elit ut aliquam</p>
-                            <a class="btn-solid-reg" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Modal</a> <a class="btn-outline-reg" href="article.html">Details</a>
-                        </div> <!-- end of text-container -->
-                    </div> <!-- end of col -->
-                </div> <!-- end of row -->
-            </div> <!-- end of container -->
-        </div> <!-- end of basic-3 -->
-        <!-- end of project 2 -->
-
-
-        <!-- Details Modal -->
-        <div id="staticBackdrop" class="modal fade" tabindex="-1" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="row">
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        <div class="col-lg-8">
-                            <div class="image-container">
-                                <img class="img-fluid" src="images/details-modal.jpg" alt="alternative">
-                            </div> <!-- end of image-container -->
-                        </div> <!-- end of col -->
-                        <div class="col-lg-4">
-                            <h3>Lorem Ipsum</h3>
-                            <hr>
-                            <p>Blandit cursus risus at ultrices mi tempus imperdiet ac feugiat sed lectus vestibulum ut sem nulla pharet</p>
-                            <h4>Duisat Tellusat</h4>
-                            <p>Pharetra magna ac placerat vestibulum faucibus in ornare quam viverra orci sagittis eu id nibh tortor id aliquet lectus</p>
-                            <ul class="list-unstyled li-space-lg">
-                                <li class="d-flex">
-                                    <i class="fas fa-chevron-right"></i>
-                                    <div class="flex-grow-1">Splash screen panel</div>
-                                </li>
-                                <li class="d-flex">
-                                    <i class="fas fa-chevron-right"></i>
-                                    <div class="flex-grow-1">Statistics graph report</div>
-                                </li>
-                                <li class="d-flex">
-                                    <i class="fas fa-chevron-right"></i>
-                                    <div class="flex-grow-1">Events calendar layout</div>
-                                </li>
-                                <li class="d-flex">
-                                    <i class="fas fa-chevron-right"></i>
-                                    <div class="flex-grow-1">Location details screen</div>
-                                </li>
-                                <li class="d-flex">
-                                    <i class="fas fa-chevron-right"></i>
-                                    <div class="flex-grow-1">Onboarding steps interface</div>
-                                </li>
-                            </ul>
-                            <a id="modalCtaBtn" class="btn-solid-reg" href="article.html">Details</a>
-                            <button type="button" class="btn-outline-reg" data-bs-dismiss="modal">Close</button>
-                        </div> <!-- end of col -->
-                    </div> <!-- end of row -->
-                </div> <!-- end of modal-content -->
-            </div> <!-- end of modal-dialog -->
-        </div> <!-- end of modal -->
-        <!-- end of details modal -->
 
 
         <!-- Project 3 -->
