--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     </div> <!-- end of col -->
                     <div class="col-lg-6 col-xl-7">
                         <div class="image-container">
-                            <img class="img-fluid" src="images/newduevoted.png" alt="alternative">
+                            <img class="img-fluid" src="images/duevoted2.png" alt="alternative">
                         </div> <!-- end of image-container -->
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
