added new navbar link

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                             <a class="nav-link" href="#projects">Projects</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="#services">Services</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="#contact">Contact</a>
                         </li>
                    
@@ -113,7 +116,7 @@
                         <div class="text-container">
                             <p>DueTwo has embraced the broad goal of making the world a better place. We will strive 
                                 to do this through the software we create and publish to the world. Each app, each 
-                                piece of software will allow each and every person around the world to help make a 
+                                piece of software, will allow each and every person around the world to help make a 
                                 difference in our ever-changing society.</p>
                                 <br />
                             <p>DueTwo Software is proud to offer a strong plan for how we will grow and expand our
@@ -121,7 +124,7 @@
                                  DueVoted will be a multi-platform application developed to help make voting easier and 
                                  more accessible to more people.</p>
                                  <br /> 
-                                 <a class="read-more no-line green" href="plan.pdf">Learn more <span class="fas fa-long-arrow-alt-right"></span></a>
+                                <!--  <a class="read-more no-line green" href="plan.pdf">Learn more <span class="fas fa-long-arrow-alt-right"></span></a> -->
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
@@ -141,7 +144,7 @@
                             
                             <p>DueVoted is a new cross-platform application with the purpose of making voting easier 
                                 and more accessible and cutting out the heavy noise from the traditional media.</p>
-                            <a class="read-more no-line green" href="https://www.duevoted.app/">Learn more <span class="fas fa-long-arrow-alt-right"></span></a>
+                            <a class="read-more no-line green" href="https://www.duevoted.app/">Launch the Web App Now <span class="fas fa-long-arrow-alt-right"></span></a>
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
                     <div class="col-lg-6 col-xl-7">
